<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="photo_view_count" formatted="false">%d of %d</string>
    <string name="retry">Retry</string>
    <string name="failed">"Couldn't load image"</string>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="done">Done</string>
    <string name="quoted_text_background_color_string">@*android:color/white</string>
    <string name="quoted_text_font_color_string">@color/gray_text_color</string>
    <string name="long_string">looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong</string>
    <string name="date">2888/88/88</string>
    <string name="compose_help_context">gm_compose</string>
    <string name="one_pane_folder_list_help_context">gm_lbl</string>
    <string name="wait_help_context">gm_wait</string>
    <string name="main_help_context">gm_ttl</string>
    <string name="trigger_save_char">s</string>
    <string name="trigger_compose_char">c</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_y_char">y</string>
    <string name="suggestions_authority">com.google.android.gmail.SuggestionsProvider</string>
    <string name="mock_content_provider">Mock Content Provider</string>
    <string name="conversation_content_provider">Conversation Content Provider</string>
    <string name="account_cache_provider">Account Cache Provider</string>
    <string name="dummy_gmail_provider">Dummy Gmail Provider</string>
    <string name="test_application">Test Application</string>
    <string name="app_name">Gmail</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="subject_hint">Subject</string>
    <string name="body_hint">Compose email</string>
    <string name="plus_bcc_folder">+</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="add_video_attachment">Attach video</string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="compose">Compose</string>
    <string name="formatted_subject">%1$s %2$s</string>
    <string name="reply_subject_label">Re:</string>
    <string name="forward_subject_label">Fwd:</string>
    <string name="reply_attribution" formatted="false">On %s, %s wrote:</string>
    <string name="forward_attribution">---------- Forwarded message ----------&lt;br>From: %1$s&lt;br>Date: %2$s&lt;br>Subject: %3$s&lt;br>To: %4$s&lt;br></string>
    <string name="cc_attribution">Cc: %1$s&lt;br></string>
    <string name="select_attachment_type">Choose type of attachment</string>
    <string name="too_large_to_attach_single">"Can't attach file over %1$s."</string>
    <string name="too_large_to_attach_multiple">One or more files not attached. Limit %1$s.</string>
    <string name="too_large_to_attach_additional">File not attached. %1$s limit reached.</string>
    <string name="generic_attachment_problem">"Couldn't attach file."</string>
    <string name="recipient_needed">Add at least one recipient.</string>
    <string name="recipient_error_dialog_title">Recipient error</string>
    <string name="confirm_send_title">Send message?</string>
    <string name="confirm_send_message_with_no_subject">"There's no text in the message subject."</string>
    <string name="confirm_send_message_with_no_body">"There's no text in the message body."</string>
    <string name="confirm_send_message">Send this message?</string>
    <string name="message_discarded">Message discarded.</string>
    <string name="signature">"

%s"</string>
    <string name="custom_from_account_label">Send mail as:</string>
    <string name="send">Send</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mute">Mute</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="remove_folder">Remove from %1$s</string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="mark_not_spam">Report not spam</string>
    <string name="report_phishing">Report phishing</string>
    <string name="delete">Delete</string>
    <string name="discard_drafts">Discard drafts</string>
    <string name="next">Older</string>
    <string name="previous">Newer</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="resume_draft">Edit</string>
    <string name="forward">Forward</string>
    <string name="prefDefault_autoAdvance">list</string>
    <string name="preference_removal_action_title">Archive &amp; delete actions</string>
    <string name="prefDialogTitle_removal_action">Archive &amp; delete actions</string>
    <string name="prefDefault_removal_action">archive</string>
    <string name="preferences_default_reply_all_title">Reply all</string>
    <string name="preferences_default_reply_all_summary">Use as default for message replies</string>
    <string name="preference_swipe_title_archive">Swipe to archive</string>
    <string name="preference_swipe_description">In conversation list</string>
    <string name="preference_sender_image_title">Sender image</string>
    <string name="preference_sender_image_description">Show beside name in conversation list</string>
    <string name="prefDefault_snapHeader">never</string>
    <string name="preferences_signature_title">Signature</string>
    <string name="preferences_signature_dialog_title">Signature</string>
    <string name="preferences_notifications_enable">Notifications</string>
    <string name="account_settings_data_usage">Data usage</string>
    <string name="preference_header_action_confirmations">Action Confirmations</string>
    <string name="preference_confirm_before_delete_title">Confirm before deleting</string>
    <string name="preference_confirm_before_archive_title">Confirm before archiving</string>
    <string name="preference_confirm_before_send_title">Confirm before sending</string>
    <string name="preference_advance_to_title">Auto-advance</string>
    <string name="preferences_message_text_size_title">Message text size</string>
    <string name="preferences_inbox_type_title">Inbox type</string>
    <string name="preferences_inbox_categories_title">Inbox categories</string>
    <string name="preferences_inbox_categories_subtitle">Categories to enable</string>
    <string name="preferences_inbox_category_personal_title">@string/label_inbox_section_personal</string>
    <string name="preferences_inbox_category_personal_summary">"Person-to-person conversations and messages that don't appear in other categories."</string>
    <string name="preferences_inbox_category_social_title">@string/label_inbox_section_social</string>
    <string name="preferences_inbox_category_social_summary">Messages from social networks, media sharing sites, online dating services.</string>
    <string name="preferences_inbox_category_promo_title">@string/label_inbox_section_promo</string>
    <string name="preferences_inbox_category_promo_summary">Deals, offers, and other marketing email.</string>
    <string name="preferences_inbox_category_notification_title">@string/label_inbox_section_notification</string>
    <string name="preferences_inbox_category_notification_summary">Personal, auto-generated updates, including confirmations, receipts, bills, and statements.</string>
    <string name="preferences_inbox_category_group_title">@string/label_inbox_section_group</string>
    <string name="preferences_inbox_category_group_summary">Messages from online groups, discussion boards, and mailing lists.</string>
    <string name="preferences_inbox_categories_starred_subtitle">Starred messages</string>
    <string name="preferences_inbox_categories_starred_checkbox">Include starred in Primary</string>
    <string name="preference_prefetch_attachments_title">Download attachments</string>
    <string name="preference_prefetch_attachments_summary">Auto-download attachments to recent messages via Wi-Fi</string>
    <string name="inboxTypeDefaultValue">default</string>
    <string name="prefDialogTitle_autoAdvance">Advance to</string>
    <string name="prefDefault_messageTextSize">1.0</string>
    <string name="prefDialogTitle_messageTextSize">Message text size</string>
    <string name="preferences_conversation_mode_title">Auto-fit messages</string>
    <string name="preferences_conversation_mode_summary">Shrink messages to fit the screen</string>
    <string name="preferences_disable_snap_headers_title">Message actions</string>
    <string name="preferences_manage_labels_title">Manage labels</string>
    <string name="preferences_manage_inbox_label_title">Inbox sound &amp; vibrate</string>
    <string name="preferences_sync_status">Sync Gmail</string>
    <string name="settings_number_of_days">Days of mail to sync</string>
    <string name="sectioned_inbox_welcome_title">Welcome to your new Inbox</string>
    <string name="sectioned_inbox_welcome_text1">Mail categories group messages of the same type for reading all at once.</string>
    <string name="sectioned_inbox_welcome_text2">You can enable and disable categories in settings.</string>
    <string name="sectioned_inbox_welcome_change_categories">Change categories</string>
    <string name="learn_more">Learn more</string>
</resources>