<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gm.ui.SectionedInboxTeaserView android:background="@color/swiped_bg_color" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/swipeable_content" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/welcome_box" android:background="@drawable/conversation_read_selector" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="21.0sp" android:textColor="@color/teaser_main_text" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sectioned_inbox_welcome_title" />
            <TextView android:textSize="16.0sp" android:textColor="@color/teaser_main_text" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sectioned_inbox_welcome_text1" android:fontFamily="sans-serif-light" />
            <TextView android:textSize="16.0sp" android:textStyle="italic" android:textColor="?android:textColorLink" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learn_more" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/conversation_unread_selector" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include android:id="@id/social_item" layout="@layout/section_teaser_item" />
            <include android:id="@id/promo_item" layout="@layout/section_teaser_item" />
            <include android:id="@id/notification_item" layout="@layout/section_teaser_item" />
            <include android:id="@id/group_item" layout="@layout/section_teaser_item" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/change_category_box" android:background="@drawable/conversation_read_selector" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/teaser_main_text" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sectioned_inbox_welcome_text2" android:fontFamily="sans-serif-light" />
            <TextView android:textSize="16.0sp" android:textStyle="italic" android:textColor="?android:textColorLink" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sectioned_inbox_welcome_change_categories" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.gm.ui.SectionedInboxTeaserView>